feat: add example docs for all route
